# WinControl-MCP-Driver

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  security.md
examples/: claude_code_config.json  claude_desktop_config.json  cursor_mcp_config.json  roo_code_mcp_config.json
scripts/: register_claude_desktop.ps1  register_roo_code.ps1  uninstall.ps1
src/wcmd/: __init__.py  __main__.py  config.py  engine.py  py.typed  server.py
tests/: conftest.py  test_dispatcher.py  test_e2e.py  test_grid_e2e.py  test_grid_real.py  test_mcp_tools.py  test_phase26.py  test_phase27.py  test_pytest_entry.py  test_smart_pruning.py
